Remove build directory before compiling static casadi lib

--- a/.github/workflows/create_artifact.yml
+++ b/.github/workflows/create_artifact.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Build casadi (static)
         run: |
           mkdir -p ${{ env.ASSET_NAME }}-static
+          rm -rf build
           mkdir build
           cd build
           cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DENABLE_SHARED=OFF -DENABLE_STATIC=ON -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/${{ env.ASSET_NAME }}-static
